[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rkn-probe"
version = "0.1.0"
description = "Multi-cloud RKN-whitelist IP probe for Windows"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.58.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
    "tenacity>=8.2.3",
]

[project.scripts]
rkn-probe = "rkn_probe.__main__:main"

[tool.setuptools.packages.find]
include = ["rkn_probe*"]
